Se creó con Colab

--- a/CursoPython_13.ipynb
+++ b/CursoPython_13.ipynb
@@ -53,25 +53,35 @@
         "#se suman todos los puntos obtenidos por los jugadores y se calcula la media aritmética, esta se usa para determinar el puntaje total de cada equipo.\n",
         "def evaluacion_equipo(calificacion_1, calificacion_2, calificacion_3):\n",
         "  promedio = (calificacion_1 + calificacion_2 + calificacion_3) / 3\n",
+        "  return promedio\n",
+        "\n",
+        "def imprimir_promedio(promedio):\n",
         "  print(f\"El promedio de este equipo es de {promedio}\")\n",
         "\n",
-        "evaluacion_equipo(8,9,8)\n",
-        "evaluacion_equipo(7,10,5)\n"
+        "_promedio_1 = evaluacion_equipo(0,9,8)\n",
+        "if _promedio_1 > 7:\n",
+        "  imprimir_promedio(_promedio_1)\n",
+        "else:\n",
+        "  print(\"Este equipo perdio\")\n",
+        "\n",
+        "_promedio_2 = evaluacion_equipo(7,10,5)\n",
+        "imprimir_promedio(_promedio_2)\n",
+        "\n"
       ],
       "metadata": {
         "id": "Sc_qI75Uma8x",
-        "outputId": "f99d50f4-259d-4aab-ffa7-1092c2e7f9a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9aa5eace-fc3c-4618-f9ff-01871944a968"
       },
-      "execution_count": 1,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "El promedio de este equipo es de 8.333333333333334\n",
+            "Este equipo perdio\n",
             "El promedio de este equipo es de 7.333333333333333\n"
           ]
         }
@@ -87,34 +97,40 @@
         "#Si a < b, la función debe mostrar la cadena \"a es menor que b\". Si a == b, la función debe imprimir la cadena \"a es igual a b\".\n",
         "def more(a,b):\n",
         "  if a > b:\n",
-        "    print(\"a es mayor que b\")\n",
-        "\n",
+        "    return a\n",
         "  if a < b:\n",
-        "    print(\"a es menor que b\")\n",
-        "\n",
+        "    return b\n",
         "  if a == b:\n",
-        "    print(\"a es igual a b\")\n",
+        "    return a\n",
         "\n",
-        "more(1,5)\n",
-        "more(17,5)\n",
-        "more(8,8)\n"
+        "\n",
+        "def imprimir_valor(valor):\n",
+        "    print(f\"{valor} es el valor mas grande\")\n",
+        "\n",
+        "a = more(1,5)\n",
+        "imprimir_valor(a)\n",
+        "\n",
+        "b = more(17,5)\n",
+        "imprimir_valor(b)\n",
+        "\n",
+        "imprimir_valor(more(8,8))\n"
       ],
       "metadata": {
         "id": "KdTgER57mu8C",
-        "outputId": "749e4d07-7e16-4dcb-f7fa-f5672bf72a48",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3e779512-9275-42f4-f8be-04a787c885f2"
       },
-      "execution_count": 2,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "a es menor que b\n",
-            "a es mayor que b\n",
-            "a es igual a b\n"
+            "5 es el valor mas grande\n",
+            "17 es el valor mas grande\n",
+            "8 es el valor mas grande\n"
           ]
         }
       ]
@@ -152,10 +168,10 @@
       ],
       "metadata": {
         "id": "sC7Vhyu-m-OU",
-        "outputId": "e3ebea83-0b0d-49d4-cbb5-fa253f58c62c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e3ebea83-0b0d-49d4-cbb5-fa253f58c62c"
       },
       "execution_count": 5,
       "outputs": [
@@ -217,10 +233,10 @@
       ],
       "metadata": {
         "id": "weL7C24UnN9X",
-        "outputId": "9f3e1b01-a320-4c82-a9c6-713845f90b7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9f3e1b01-a320-4c82-a9c6-713845f90b7b"
       },
       "execution_count": 9,
       "outputs": [
@@ -257,10 +273,10 @@
       ],
       "metadata": {
         "id": "QAkB2Ycsnbt_",
-        "outputId": "bf3ed74d-bf98-4706-cb1c-5239728d0fec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bf3ed74d-bf98-4706-cb1c-5239728d0fec"
       },
       "execution_count": 12,
       "outputs": [
@@ -306,10 +322,10 @@
       ],
       "metadata": {
         "id": "lIzSV7rFnmz-",
-        "outputId": "e9bfa5a3-ef28-4f52-e4c3-62ff649c8dbd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e9bfa5a3-ef28-4f52-e4c3-62ff649c8dbd"
       },
       "execution_count": 18,
       "outputs": [
