Se creó con Colab

--- a/CursoPython_13.ipynb
+++ b/CursoPython_13.ipynb
@@ -138,6 +138,31 @@
     {
       "cell_type": "code",
       "source": [
+        "from my_module import my_function\n",
+        "\n",
+        "my_function()\n"
+      ],
+      "metadata": {
+        "id": "u3Qn5xPDvex9",
+        "outputId": "64d59e50-fff4-4e53-d5a6-6388f9cb938d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Preuba!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#Un grupo de turistas decidió realizar una excursión. Dibujaron una línea en el mapa que sería el camino que seguirían.\n",
         "#Raúl quiere unirse al grupo en el punto (x, y). Determina si el punto se encuentra sobre la ruta marcada o no.\n",
         "#El programa registra el ingreso de dos números, x e y, cada uno en una nueva cadena, las coordenadas del punto en el que Raúl quiere\n",
